sumo/tests/jtrrouter/errors/false_output/options.jtrrouter
--net-file=input_net.net.xml --flows=input_flows.flows.xml -o output/routes.rou.xml
